Activate generation of verb cards

--- a/Koko/templates/create.html
+++ b/Koko/templates/create.html
@@ -16,7 +16,7 @@
 						Erstelle
 						<select id="pos">
 							<option value="NN" selected="selected">Nomen</option>
-							<option value="VB" disabled="disabled">Verben</option>
+							<option value="VB">Verben</option>
 							<option value="JJ" disabled="disabled">Adjektive</option>
 						</select>
 						in
