Enable selection of adjectives

--- a/Koko/templates/create.html
+++ b/Koko/templates/create.html
@@ -17,7 +17,7 @@
 						<select id="pos">
 							<option value="NN" selected="selected">Nomen</option>
 							<option value="VB">Verben</option>
-							<option value="JJ" disabled="disabled">Adjektive</option>
+							<option value="JJ">Adjektive</option>
 						</select>
 						in
 						<select id="language">
